Closed Bug 984110 Opened 10 years ago Closed 10 years ago

nsNetscapeProfileMigratorBase.cpp(457) : error C2440: 'typecast' : cannot convert from 'nsGetterAddRefs<T>' to 'nsISupports **'

Categories

(SeaMonkey :: General, defect)

defect
Not set
normal

Tracking

(seamonkey2.27 fixed)

RESOLVED FIXED
seamonkey2.27
Tracking Status
seamonkey2.27 --- fixed

People

(Reporter: philip.chee, Assigned: philip.chee)

References

Details

Attachments

(1 file)

http://hg.mozilla.org/comm-central/rev/e67da9f094ff claims to have fixed comm-central. This is clearly incorrect.

mozmake[5]: Entering directory 'c:/t1/hg/objdir-sm/suite/profile/migration/src'
nsNetscapeProfileMigratorBase.cpp
c:/t1/hg/objdir-sm/mozilla/_virtualenv/Scripts/python.exe -m mozbuild.action.cl  cl -FonsNetscapeProfileMigrat
orBase.obj -c -D_HAS_EXCEPTIONS=0 -I../../../../mozilla/dist/stl_wrappers  -DOSTYPE=\"WINNT6.1\" -DOSARCH=WINN
T -DNO_NSPR_10_SUPPORT  -Ic:/t1/hg/comm-central/suite/profile/migration/src -I. -I../../../../mozilla/dist/inc
lude -I../../../../mozilla/dist/include/nsprpub  -Ic:/t1/hg/objdir-sm/mozilla/dist/include/nspr -Ic:/t1/hg/obj
dir-sm/mozilla/dist/include/nss  -I/c/t1/hg/objdir-sm/mozilla/dist/include      -wd4099 -TP -nologo -W3 -Gy -F
dgenerated.pdb -wd4251 -wd4244 -wd4345 -wd4351 -wd4482 -wd4800 -wd4819 -we4553 -GR-  -DNDEBUG -DTRIMMED -Zi -Z
i -UDEBUG -DNDEBUG -O1 -Oy -MT            -FI ../../../../mozilla/dist/include/mozilla-config.h -DMOZILLA_CLIE
NT c:/t1/hg/comm-central/suite/profile/migration/src/nsNetscapeProfileMigratorBase.cpp
nsNetscapeProfileMigratorBase.cpp
c:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\INCLUDE\xutility(3408) : warning C4273: 'std::moz_Xinva
lid_argument' : inconsistent dll linkage
        c:\t1\hg\objdir-sm\mozilla\dist\include\mozilla\msvc_raise_wrappers.h(26) : see previous definition of
 'moz_Xinvalid_argument'
c:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\INCLUDE\xutility(3409) : warning C4273: 'std::moz_Xleng
th_error' : inconsistent dll linkage
        c:\t1\hg\objdir-sm\mozilla\dist\include\mozilla\msvc_raise_wrappers.h(27) : see previous definition of
 'moz_Xlength_error'
c:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\INCLUDE\xutility(3410) : warning C4273: 'std::moz_Xout_
of_range' : inconsistent dll linkage
        c:\t1\hg\objdir-sm\mozilla\dist\include\mozilla\msvc_raise_wrappers.h(28) : see previous definition of
 'moz_Xout_of_range'
c:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\INCLUDE\xutility(3411) : warning C4273: 'std::moz_Xover
flow_error' : inconsistent dll linkage
        c:\t1\hg\objdir-sm\mozilla\dist\include\mozilla\msvc_raise_wrappers.h(29) : see previous definition of
 'moz_Xoverflow_error'
c:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\INCLUDE\xutility(3412) : warning C4273: 'std::moz_Xrunt
ime_error' : inconsistent dll linkage
        c:\t1\hg\objdir-sm\mozilla\dist\include\mozilla\msvc_raise_wrappers.h(30) : see previous definition of
 'moz_Xruntime_error'
c:/t1/hg/comm-central/suite/profile/migration/src/nsNetscapeProfileMigratorBase.cpp(457) : error C2440: 'type
cast' : cannot convert from 'nsGetterAddRefs<T>' to 'nsISupports **'
        with
        [
            T=nsIFile
        ]
        No user-defined-conversion operator available that can perform this conversion, or the operator cannot
 be called
c:/t1/hg/comm-central/config/rules.mk:960: recipe for target 'nsNetscapeProfileMigratorBase.obj' failed
mozmake[5]: *** [nsNetscapeProfileMigratorBase.obj] Error 2
mozmake[5]: Leaving directory 'c:/t1/hg/objdir-sm/suite/profile/migration/src'
c:/t1/hg/comm-central/config/recurse.mk:44: recipe for target 'migration/src_compile' failed
mozmake[4]: *** [migration/src_compile] Error 2
mozmake[4]: Leaving directory 'c:/t1/hg/objdir-sm/suite/profile'
c:/t1/hg/comm-central/config/recurse.mk:44: recipe for target 'compile' failed
Blocks: 967364
Mmm, fixed thunderbird is probably a more accurate description.

The fixes are mechanical; it should be easy to see what needs to be done from the changes to the mail/ profile migrators.
No longer blocks: 967364
So only one hunk missed out.
Assignee: khuey → philip.chee
Attachment #8391867 - Flags: review?(neil)
Attachment #8391867 - Flags: review?(khuey)
Comment on attachment 8391867 [details] [diff] [review]
Patch v1.0 fix for Suite

Review of attachment 8391867 [details] [diff] [review]:
-----------------------------------------------------------------

r=me

thanks
Attachment #8391867 - Flags: review?(khuey) → review+
Attachment #8391867 - Flags: review?(neil) → review+
pushed comm-central changeset 58095beb8172
http://hg.mozilla.org/comm-central/rev/58095beb8172
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → seamonkey2.27
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: