Bug 984110 Fix up comm-central/suite for bug 345123 and bug 967364. r=khuey r=Neil a=me bustage fix CLOSED TREE