suite/profile/migration/src/nsNetscapeProfileMigratorBase.cpp
@@ -454,8 +454,10 @@ nsNetscapeProfileMigratorBase::RecursiveCopy(nsIFile* srcDir,
   nsCOMPtr<nsIFile> dirEntry;
   
   while (hasMore) {
-    rv = dirIterator->GetNext((nsISupports**)getter_AddRefs(dirEntry));
-    if (NS_SUCCEEDED(rv)) {
+    nsCOMPtr<nsISupports> supports;
+    rv = dirIterator->GetNext(getter_AddRefs(supports));
+    dirEntry = do_QueryInterface(supports);
+    if (NS_SUCCEEDED(rv) && dirEntry) {
       rv = dirEntry->IsDirectory(&isDir);
       if (NS_SUCCEEDED(rv)) {
         if (isDir) {
